--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/google": "latest",
+    "@ai-sdk/google": "^1.2.22",
     "@emotion/is-prop-valid": "latest",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.6.1",
     "ai": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,6 +48,7 @@
     "framer-motion": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "midtrans-client": "^1.4.3",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
@@ -61,6 +64,7 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
